cqrs pattern implementation refactored